更新 2024-5-31-一瞥雪花之白.md

--- a/source/_posts/2024-5-31-一瞥雪花之白.md
+++ b/source/_posts/2024-5-31-一瞥雪花之白.md
@@ -11,7 +11,7 @@ cover: ../img/jk.jpg
 
 我不想再安慰自己了，形势已经十分严峻，半吊子的机械软件专业，看起来很广泛，实际上哪边都不精。如果我再不自己加快步伐，而是浑浑噩噩地过日子，属于我的be迟早会来。这就是为什么芦苇纷纷拂下头颅的加瓦课，我会在最后一排抬头听。
 
-
+<!--more-->
 
 > 声明成员变量 写窗口方法 初始化窗口方法...
 
