更新 2024-5-29-Utools破解过程.md

--- a/source/_posts/2024-5-29-Utools破解过程.md
+++ b/source/_posts/2024-5-29-Utools破解过程.md
@@ -6,9 +6,9 @@ tags:
 - 效率
 - 工具
 - 破解
-cover: ../img/
+cover: https://img2.imgtp.com/2024/05/31/QpCyTAIc.jpeg
 ---
-
+<!--more-->
 破解版本：utools 4.0.1
 
 下载地址：https://www.cmdpe.com/post/373.html
