更新 2024-5-25-Chatgpt的最佳实践.md

--- a/source/_posts/2024-5-25-Chatgpt的最佳实践.md
+++ b/source/_posts/2024-5-25-Chatgpt的最佳实践.md
@@ -5,10 +5,10 @@ tags:
 - 技术
 - AI
 - 实践
-cover: ../img/
+cover: https://img2.imgtp.com/2024/05/31/u6HuqM2U.jpeg
 ---
 ### [](#header-3)实践一
-Arc的Windows版本最近更新了一个侧栏迷你播放器，但是有一个致命问题：就是某些网站播放音频时，播放器无法正确获得歌曲标题，我发现它显示的标题来自相应标签自己的标题，而我是用的网页音乐播放器是am，am不会根据当前播放的歌曲改变标签标题，因此mini播放器也就无法显示正确的歌曲标题，但是打开网页控制台就可以找到歌曲的标题作者等信息所对应的元素属性名字，这意味着可以通过撰写一个js脚本，使得标签标题随着歌曲信息的元素属性更名，每一秒检查一次，并将其挂载在油猴扩展运行，于是我向ChatGPT描述了我的需求，并得到了一段可行的代码。
+Arc的Windows版本最近更新了一个侧栏迷你播放器，但是有一个致命问题：就是<!--more-->某些网站播放音频时，播放器无法正确获得歌曲标题，我发现它显示的标题来自相应标签自己的标题，而我是用的网页音乐播放器是am，am不会根据当前播放的歌曲改变标签标题，因此mini播放器也就无法显示正确的歌曲标题，但是打开网页控制台就可以找到歌曲的标题作者等信息所对应的元素属性名字，这意味着可以通过撰写一个js脚本，使得标签标题随着歌曲信息的元素属性更名，每一秒检查一次，并将其挂载在油猴扩展运行，于是我向ChatGPT描述了我的需求，并得到了一段可行的代码。
 https://chatgpt.com/share/5d0af45f-3da2-480f-b534-ff2efff075dd  
     
 ```javascript  
