--- a/source/_posts/2024-5-29-Utools破解过程.md
+++ b/source/_posts/2024-5-29-Utools破解过程.md
@@ -6,7 +6,7 @@ tags:
 - 效率
 - 工具
 - 破解
-cover: https://img2.imgtp.com/2024/05/31/QpCyTAIc.jpeg
+cover: https://img.picui.cn/free/2024/06/01/665b025fb553f.jpeg
 ---
 破解版本：utools 4.0.1
 <!--more-->
