--- a/source/_posts/2024-5-23-Git见解和常用命令.md
+++ b/source/_posts/2024-5-23-Git见解和常用命令.md
@@ -6,7 +6,7 @@ tags:
 - Git
 - wiki
 toc: true
-cover: https://img.picui.cn/free/2024/06/01/665b025fb553f.jpeg
+cover: https://img.picui.cn/free/2024/06/01/665b025fa4d4e.png
 ---
 ### [](#header-3)Git二三事
 
