--- a/source/_posts/2024-06-01-test.md
+++ b/source/_posts/2024-06-01-test.md
@@ -1,8 +1,8 @@
 ---
 title: test
 toc: false
-comments: false
-published: true
+comment: false
+published: false
 mathjax: true
 categories:
   - first categories
@@ -10,7 +10,7 @@ tags:
   - test
 date: 2024-06-01 22:50:40
 summary: This is a test post
-cover: 
+cover: https://img.picui.cn/free/2024/06/01/665b36179958d.png
 top: 100
 img: https://img.picui.cn/free/2024/06/01/665b36179958d.png
 disqusId: 2
