--- a/source/_posts/2024-06-01-hexo框架迁移记录.md
+++ b/source/_posts/2024-06-01-hexo框架迁移记录.md
@@ -7,9 +7,6 @@ tags:
 - Hexo框架
 cover: https://img10.360buyimg.com/ddimg/jfs/t1/104299/28/23631/66850/622032acEe2917d77/d738b5747ec64e49.png
 disqusId: 1
+thumbnail: https://img.picui.cn/free/2024/06/02/665c6539c2838.png
 ---
-5.20 - 基于Jekyll框架建立站点并部署到Github pages
-5.31 - 将Github pages站点整体框架迁移至Hexo并
-<!--more-->
-6.1 - 为站点添加深色模式，并为卡片添加圆角，悬浮响应等；
-    - 为站点部署第三方服务：站内搜索、评论、转发、打赏等；
+五月将博客部署在Github Pages上，并采用了Github官方推荐的Jekyll架构，然而该架构几乎没有中文支持，并且没能找到我喜欢的模板，从零开始一砖一瓦的构建需要大量的时间和学习，我没这个成本，所以就放着没管，直到阅读到Sukka的博客，<!--more-->三栏布局的主页相当优雅，于是我导航到Sukka博客的最后一页，了解到他是用Hexo框架搭建的网站，并提供了hexo的官方文档，这样就很方便了
