更新 2024-06-01-hexo框架迁移记录.md

--- a/source/_posts/2024-06-01-hexo框架迁移记录.md
+++ b/source/_posts/2024-06-01-hexo框架迁移记录.md
@@ -9,5 +9,6 @@ cover: https://img10.360buyimg.com/ddimg/jfs/t1/104299/28/23631/66850/622032acEe
 disqusId: 1
 thumbnail: https://img.picui.cn/free/2024/06/02/665c6539c2838.png
 ---
+题记：本篇介绍用Hexo框架构建博客的经历
 <!--more-->
 五月将博客部署在Github Pages上，并采用了Github官方推荐的Jekyll架构，然而该架构几乎没有中文支持，并且没能找到我喜欢的模板，从零开始一砖一瓦的构建需要大量的时间和学习，我没这个成本，所以就放着没管，直到阅读到Sukka的博客，<!--more-->三栏布局的主页相当优雅，于是我导航到Sukka博客的最后一页，了解到他是用Hexo框架搭建的网站，并提供了hexo的官方文档，这样就很方便了
