更新 2024-5-23-Git见解和常用命令.md

--- a/source/_posts/2024-5-23-Git见解和常用命令.md
+++ b/source/_posts/2024-5-23-Git见解和常用命令.md
@@ -8,15 +8,14 @@ tags:
 toc: true
 cover: https://img.picui.cn/free/2024/06/01/665b025fa4d4e.png
 ---
-### [](#header-3)Git二三事
-
 > Distributed-is-the-new-centralized
+<!--more-->
 
 在阅读git的文档的过程中看到这句话，感觉非常精髓。
 
 是说版本控制分为本地版本控制系统、集中化(Centralized)版本控制系统以及分布式(Distributed)版本控制系统，其中：
 
-1. 本地版本控制中，最流行的一种是RCS<!--more-->，其工作原理是在硬盘上保存补丁集（补丁是指文件修订前后的变化）；通过应用所有的补丁，可以重新计算出各个版本的文件内容；
+1. 本地版本控制中，最流行的一种是RCS，其工作原理是在硬盘上保存补丁集（补丁是指文件修订前后的变化）；通过应用所有的补丁，可以重新计算出各个版本的文件内容；
 
 2. 为了让在不同系统上的开发者协同工作，集中化的版本控制系统（Centralized Version Control Systems，简称 CVCS）应运而生，比较具有代表性的比如CVS、Subversion、Perforce等，都有一个**单一**的**集中管理**的服务器，保存所有文件的修订版本，协同工作的机器都连接到此地，拉取新文件或是推送更新；
 
