更新 2024-5-29-Arc浏览器Win版使用指北.md

--- a/source/_posts/2024-5-29-Arc浏览器Win版使用指北.md
+++ b/source/_posts/2024-5-29-Arc浏览器Win版使用指北.md
@@ -9,9 +9,10 @@ toc: true
 top: 10000
 cover: https://img.picui.cn/free/2024/06/01/665b1193bbb5d.jpg
 ---
-
-浏览器可说是计算机系统中最重要的软件之一，或许没有之一。而Arc浏览器则是众多主流浏览器选择之外最为别出心裁的一个Chromium分支。
+题记：本文解决Arc浏览器中的常见错误
 <!--more-->
+浏览器可说是计算机系统中最重要的软件之一，或许没有之一。而Arc浏览器则是众多主流浏览器选择之外最为别出心裁的一个Chromium分支。
+
 少数派用户PlaytyHsu将Arc翻译为弧光，私以为这个翻译很准确，开发Arc浏览器的公司常常将蓝紫色融入他们的设计中，看起来很像弧光，而Arc本身也有这个意思。
 
 本文不展开介绍Arc的优点，前人之述备矣，这篇文章的主要使命是提供一些Windows版本Arc中常见的问题的解决办法。
