更新 2024-5-31-一瞥雪花之白.md

--- a/source/_posts/2024-5-31-一瞥雪花之白.md
+++ b/source/_posts/2024-5-31-一瞥雪花之白.md
@@ -10,27 +10,17 @@ published: true
 ---
 省流：批瘾犯了
 <!--more-->
-我不想再安慰自己了，形势已经十分严峻，半吊子的机械软件专业，看起来很广泛，实际上哪边都不精。如果我再不自己加快步伐，而是浑浑噩噩地过日子，最坏的结局迟早会来。这就是为什么芦苇纷纷拂下头颅的加瓦课，我会在最后一排抬头听。
+芦苇纷纷拂下头颅的课，我在最后一排抬头听。
 
-“声明成员变量 写窗口方法 初始化窗口方法...”
-
-
+百无聊赖的气氛充斥着教室，窗户大开着，风就匆匆涌进来，已经接近六月了，但是旅顺的海风依旧清爽，完全没有夏天的迹象，并非不是我想走神，是这课实在无聊，我有一句没一句的和身旁同学闲聊，试图打发这两小时。
 
 然而并非故意的一瞥，只是余光中扫过一片雪花花的白，我的瞳孔不合时宜的聚焦在授课内容以外的一处。我望向那犹如沙丘一般蜿蜒着勾勒出的优雅曲线，怅然若失，仿佛着了魔似的，我无法控制我的视线， 从而不去看那双纤细而又不是肉感的大腿，那质感既像丝绸，又似流沙，而我则像是卧沙的蟹，只想扎入其中不再出来。
 
-
-
 我希望那位前排的女同学就这么一直靠在椅背，翘着二郎腿，这样我就可以肆无忌惮的欣赏，可惜事与愿违，我想女人的背后果真长眼的，她娇小得背在我专心观察时猛然一震，也许并没有那么强烈，但对于小心翼翼的我来说已然足够，然后从椅背弹起来，最终将翘起的二郎腿放了下去，而我的目光则失去了居所，悻悻然地把背靠回椅子，试图将注意力拉回老师正在念的内容。
 
-
-
-监视器？actionlistener？如今在讲什么我已全然不知，相当一部分的我正满心期望她重新翘起腿来让我瞧个究竟，同时另一部分的我在谴责自己的偷窥之行，我自私的以为这是人之常情，但作为一个女人活在像我这样男人的窥视下想必会很艰难。
-
-
+如今在讲什么我已全然不知，相当一部分的我正满心期望她重新翘起腿来让我瞧个究竟，同时另一部分的我在谴责自己的偷窥之行，我自私的以为这是人之常情，但作为一个女人活在像我这样男人的窥视下想必会很艰难。
 
 尽管如此我还是无法控制住自己有意无意地窥探，我感觉自己像是粮仓里的老鼠，只等着从阴暗的角落里跑出来大饱口福。因为一些故障，加瓦老师决定用腾讯会议在自己的电脑授课，而我们则用手机入会，我低头看着手机屏幕，脸埋得比鸵鸟还要低，但是眼珠却时不时的像要顶破眼珠子的框架一般往外翻，捕捉着在前排椅子间的空隙她身体摆动的瞬间漏出来的哪怕一点白色。
-
-
 
 一段漫长的时间过去，对我来说却只像是一瞬间，她又靠在了椅背上，许是坐累了，一只腿终于又搭在另外一只腿上面，肌肉因为压迫而收缩形成一道沟壑，但是因为她人很苗条，大腿肉也很均匀，形成的肉沟不会显得恶心，反倒很诱人，因为这正是那娇嫩双腿之柔软的最好证明。
 
@@ -38,6 +28,4 @@ published: true
 
 再者是膝盖下方弯曲的部分，在光影衬托下隐藏于阴影的肉沟，看起来柔软而温润，一点点因为挤压而供起的肉更显得可爱而性感，因为是两条腿之间的沟壑，只需观察此处就可以将视野同时覆盖到两条腿，她的腿型修长而纤细，白白净净，见不着一根毛，而毛孔清晰可见，仿佛在证明自身如丝绸般柔软糯滑的触感，我无数次抑制自己想要打开相机记录的冲动，然而就在我的视野不知第几次飘过去时，好比月亮钻进云朵，她又坐正来，放平了双腿，令人扫兴。
 
-
-
-我觉得她一定是发觉我的目光了，之后她每次翘起二郎腿，都很快地放下去，我也没敢再看。结果直到加瓦课下课我都没听进去多少，满心只想着白花花的大腿和软糯糯的手感，回味无穷。事后惊觉此举之堕落，不能再这样子下去，遂记此篇以回味。
+我觉得她一定是发觉我的目光了，之后她每次翘起二郎腿，都很快地放下去，我也没敢再看。结果直到下课我都没听进去多少，满心只想着白花花的大腿和软糯糯的手感，回味无穷。事后惊觉此举之堕落，不能再这样子下去，遂记此篇以回味。
