更新 2024-5-31-一瞥雪花之白.md

--- a/source/_posts/2024-5-31-一瞥雪花之白.md
+++ b/source/_posts/2024-5-31-一瞥雪花之白.md
@@ -12,7 +12,7 @@ published: true
 <!--more-->
 芦苇纷纷拂下头颅的课，我在最后一排抬头听。
 
-百无聊赖的气氛充斥着教室，窗户大开着，风就匆匆涌进来，已经接近六月了，但是旅顺的海风依旧清爽，完全没有夏天的迹象，并非不是我想走神，是这课实在无聊，我有一句没一句的和身旁同学闲聊，试图打发这两小时。
+百无聊赖的气氛充斥着教室，窗户大开着，风就匆匆涌进来，已经接近六月了，但是旅顺的海风依旧清爽，完全没有夏天的迹象。也不是我想走神，是这课实在无聊，因此我有一句没一句的和身旁同学闲聊，试图打发这两小时。
 
 然而并非故意的一瞥，只是余光中扫过一片雪花花的白，我的瞳孔不合时宜的聚焦在授课内容以外的一处。我望向那犹如沙丘一般蜿蜒着勾勒出的优雅曲线，怅然若失，仿佛着了魔似的，我无法控制我的视线， 从而不去看那双纤细而又不是肉感的大腿，那质感既像丝绸，又似流沙，而我则像是卧沙的蟹，只想扎入其中不再出来。
 
