--- a/source/_posts/2024-5-31-一瞥雪花之白.md
+++ b/source/_posts/2024-5-31-一瞥雪花之白.md
@@ -12,25 +12,26 @@ published: true
 <!--more-->
 芦苇纷纷拂下头颅的课，我在最后一排抬头听。
 
-百无聊赖的气氛充斥着教室，窗户大开着，风就匆匆涌进来，已经接近六月了，但是旅顺的海风依旧清爽，完全没有夏天的迹象。也不是我想走神，是这课实在无聊，因此我有一句没一句的和身旁同学闲聊，试图打发这两小时。
+百无聊赖的气氛充斥着教室，窗户大开着，风就匆匆涌进来，已经接近六月了，但是旅顺的海风依旧清爽，完全没有夏天的迹象。
 
+也不是我想走神，是这课实在无聊，因此我有一句没一句地和身旁同学闲聊，试图打发这两小时。
 然而并非故意的一瞥，只是余光中扫过一片雪花花的白，我的瞳孔不合时宜的聚焦在授课内容以外的一处。我望向那犹如沙丘一般蜿蜒着勾勒出的优雅曲线，怅然若失，仿佛着了魔似的，我无法控制我的眼球不去看那双纤细而又不失肉感的大腿，那质感既像丝绸，又似流沙，而我则像是卧沙的蟹，只想扎入其中不再出来。
 
-我希望那位前排的女同学就这么一直靠在椅背，翘着二郎腿，这样我就可以肆无忌惮的欣赏，然而事与愿违。我想女人的背后果真长眼的，她娇小得背在我专心观察时猛然一震，然后从椅背弹起来，也许并没有那么强烈，但对于小心翼翼的我来说已然足够，她最终将翘起的二郎腿放了下去，而我的目光则失去了居所，悻悻然地把背靠回椅子，试图将注意力拉回老师正在念的内容。
+我希望前排那位面容姣好的女同学就这么一直靠在椅背，翘着二郎腿，那样我就可以肆无忌惮地欣赏，然而事与愿违。我想女人的背后果真长眼的，她娇小得背在我专心观察时猛然一震，然后从椅背弹起来，也许并没有那么强烈，但对于小心翼翼的我来说已然足够，她最终将翘起的二郎腿放了下去，而我的目光则失去了居所，悻悻然地把背靠回椅子，试图将注意力拉回老师正在念的内容。
 
 如今在讲什么我已全然不知，相当一部分的我正满心期望她重新翘起腿来让我瞧个究竟，同时另一部分的我在谴责自己的偷窥之行，我自私的以为这是人之常情，但作为一个女人活在像我这样男人的窥视下想必会很艰难。
 
 尽管如此我还是无法控制住自己有意无意地窥探，我突然感觉自己像是粮仓里的老鼠，只等着从阴暗的角落里跑出来大饱口福。
 
-因为一些故障，加瓦老师决定用腾讯会议在自己的电脑授课，而我们则用手机入会，我低头看着手机屏幕，脸埋得比鸵鸟还要低，但是眼珠却时不时的像要顶破眼珠子的框架一般往外翻，捕捉着在前排椅子间的空隙她身体摆动的瞬间漏出来的哪怕一点白色。
+因为一些故障，老师决定用腾讯会议在自己的电脑授课，而我们则用手机入会，我低头看着手机屏幕，脸埋得比鸵鸟还要低，但是眼珠却时不时的像要顶破眼珠子的框架一般往外翻，捕捉着在前排椅子间的空隙她身体摆动的瞬间漏出来的哪怕一点白色。
 
-一段漫长的时间过去，对我来说却只像是一瞬间，她又靠在了椅背上，许是坐累了，一只腿终于又搭在另外一只腿上面，肌肉因为压迫而收缩形成一道沟壑，但是因为她人很苗条，大腿肉也很均匀，形成的肉沟不会显得恶心，反倒很诱人，因为这正是那娇嫩双腿之柔软的最好证明。
+一段漫长的时间过去，对我来说却只像是一瞬间，她又靠在了椅背上，许是坐累了，一只腿又重新搭在另外一只腿上面，大腿上的肌肉因为压迫的缘故而收缩，形成一道沟壑，但是因为她人很苗条，大腿肉也很均匀，形成的肉沟不会显得恶心，反倒很诱人，因为这正是那娇嫩双腿之柔软的最好证明。
 
 她的腿反射着窗口照进来的光，白里透红，接近短裤的地方，还有一颗并不起眼的痣，一小撮黑反而将白衬的更白。整个教室的颜色因此都渐渐暗淡下去，在我的视野里还留有颜色的只剩下这一处空间。我一边在脑海中想象，一边为龌龊的想法而感到无地自容，虽说论心无圣人，但想必论迹我更是不折不扣的烂人。
 
 且先抛去道德考虑，那大腿白净如纸，其触感一定是像玉石一样顺滑，但又兼有家猫的柔软。如果把手放上去会怎样呢，假若一整个手掌心和大腿肉完全贴合的话，能感受到何种程度的温柔？她会不会出于娇羞而满面通红呢？我擅自幻想她精致的面颊泛起微红，但是却不甩开我的手，而是放任我的手在她的大腿揉捏，娇嫩的大腿手感一定是像刚成熟的樱桃，稍微用力点把玩，其中的汁水就呼之欲出，最后留下一抹淡淡的红。
 
-再者是膝盖下方弯曲的部分，在光影衬托下隐藏于阴影的肉沟，看起来柔软而温润，一点点因为挤压而供起的肉更显得可爱而性感，因为是两条腿之间的沟壑，只需观察此处就可以将视野同时覆盖到两条腿，她的腿型修长而纤细，白白净净，见不着一根毛，而毛孔清晰可见，仿佛在证明自身如丝绸般柔软糯滑的触感，
+再者是膝盖下方弯曲的部分，在光影衬托下隐藏于阴影的肉沟，看起来柔软而温润，一点点因为挤压而供起的肉更显得可爱而性感，因为是两条腿之间的沟壑，只需观察此处就可以将视野覆盖到她那穿着短裤的大腿的绝大部分，她的腿型修长而纤细，白白净净，看不见一根毛，而毛孔清晰可见，仿佛在证明自身如丝绸般柔软糯滑的触感，
 
-我无数次抑制自己想要打开相机记录的冲动，然而就在我的视野不知第几次飘过去时，好比月亮钻进云朵，她又坐正来，放平了双腿，令人扫兴。
+我无数次抑制自己想要打开相机记录的冲动，然而就在我的视野不知第几次飘过去时，好比月亮钻进云朵，她又坐正来，放平双腿，令人扫兴。
 我觉得她一定是发觉我的目光了，之后她每次翘起二郎腿，都很快地放下去，我也没敢再看。结果直到下课我都没听进去多少，满心只想着白花花的大腿和软糯糯的手感，回味无穷。事后惊觉此举之堕落，不能再这样子下去，遂记此篇以回味。
