更新 2024-5-31-一瞥雪花之白.md

--- a/source/_posts/2024-5-31-一瞥雪花之白.md
+++ b/source/_posts/2024-5-31-一瞥雪花之白.md
@@ -14,8 +14,7 @@ published: true
 
 百无聊赖的气氛充斥着教室，窗户大开着，风就匆匆涌进来，已经接近六月了，但是旅顺的海风依旧清爽，完全没有夏天的迹象。
 
-也不是我想走神，是这课实在无聊，因此我有一句没一句地和身旁同学闲聊，试图打发这两小时。
-然而并非故意的一瞥，只是余光中扫过一片雪花花的白，我的瞳孔不合时宜的聚焦在授课内容以外的一处。我望向那犹如沙丘一般蜿蜒着勾勒出的优雅曲线，怅然若失，仿佛着了魔似的，我无法控制我的眼球不去看那双纤细而又不失肉感的大腿，那质感既像丝绸，又似流沙，而我则像是卧沙的蟹，只想扎入其中不再出来。
+也不是我想走神，是这课实在无聊，因此我有一句没一句地和身旁同学闲聊，试图打发这两小时。然而并非故意的一瞥，只是余光中扫过一片雪花花的白，我的瞳孔不合时宜的聚焦在授课内容以外的一处。我望向那犹如沙丘一般蜿蜒着勾勒出的优雅曲线，怅然若失，仿佛着了魔似的，我无法控制我的眼球不去看那双纤细而又不失肉感的大腿，那质感既像丝绸，又似流沙，而我则像是卧沙的蟹，只想扎入其中不再出来。
 
 我希望前排那位面容姣好的女同学就这么一直靠在椅背，翘着二郎腿，那样我就可以肆无忌惮地欣赏，然而事与愿违。我想女人的背后果真长眼的，她娇小得背在我专心观察时猛然一震，然后从椅背弹起来，也许并没有那么强烈，但对于小心翼翼的我来说已然足够，她最终将翘起的二郎腿放了下去，而我的目光则失去了居所，悻悻然地把背靠回椅子，试图将注意力拉回老师正在念的内容。
 
@@ -33,5 +32,4 @@ published: true
 
 再者是膝盖下方弯曲的部分，在光影衬托下隐藏于阴影的肉沟，看起来柔软而温润，一点点因为挤压而供起的肉更显得可爱而性感，因为是两条腿之间的沟壑，只需观察此处就可以将视野覆盖到她那穿着短裤的大腿的绝大部分，她的腿型修长而纤细，白白净净，看不见一根毛，而毛孔清晰可见，仿佛在证明自身如丝绸般柔软糯滑的触感，
 
-我无数次抑制自己想要打开相机记录的冲动，然而就在我的视野不知第几次飘过去时，好比月亮钻进云朵，她又坐正来，放平双腿，令人扫兴。
-我觉得她一定是发觉我的目光了，之后她每次翘起二郎腿，都很快地放下去，我也没敢再看。结果直到下课我都没听进去多少，满心只想着白花花的大腿和软糯糯的手感，回味无穷。事后惊觉此举之堕落，不能再这样子下去，遂记此篇以回味。
+我无数次抑制自己想要打开相机记录的冲动，然而就在我的视野不知第几次飘过去时，好比月亮钻进云朵，她又坐正来，放平双腿，令人扫兴。我觉得她一定是发觉我的目光了，之后她每次翘起二郎腿，都很快地放下去，我也没敢再看。结果直到下课我都没听进去多少，满心只想着白花花的大腿和软糯糯的手感，回味无穷。事后惊觉此举之堕落，不能再这样子下去，遂记此篇以回味。
