更新 2024-5-31-一瞥雪花之白.md

--- a/source/_posts/2024-5-31-一瞥雪花之白.md
+++ b/source/_posts/2024-5-31-一瞥雪花之白.md
@@ -32,4 +32,4 @@ published: true
 
 再者是膝盖下方弯曲的部分，在光影衬托下隐藏于阴影的肉沟，看起来柔软而温润，一点点因为挤压而供起的肉更显得可爱而性感，因为是两条腿之间的沟壑，只需观察此处就可以将视野覆盖到她那穿着短裤的大腿的绝大部分，她的腿型修长而纤细，白白净净，看不见一根毛，而毛孔清晰可见，仿佛在证明自身如丝绸般柔软糯滑的触感，
 
-我无数次抑制自己想要打开相机记录的冲动，然而就在我的视野不知第几次飘过去时，好比月亮钻进云朵，她又坐正来，放平双腿，令人扫兴。我觉得她一定是发觉我的目光了，之后她每次翘起二郎腿，都很快地放下去，我也没敢再看。结果直到下课我都没听进去多少，满心只想着白花花的大腿和软糯糯的手感，回味无穷。事后惊觉此举之堕落，不能再这样子下去，遂记此篇以回味。
+我无数次抑制住自己想要打开相机记录的冲动，然而就在我的视野不知第几次飘过去时，好比月亮钻进云朵，她又坐正来，放平双腿，令人扫兴。我觉得她一定是发觉我的目光了，之后她每次翘起二郎腿，都很快地放下去，我也没敢再看。结果直到下课我都没听进去多少，满心只想着白花花的大腿和软糯糯的手感，回味无穷。事后惊觉此举之堕落，不能再这样子下去，遂记此篇以回味。
