--- a/source/_posts/2024-5-31-一瞥雪花之白.md
+++ b/source/_posts/2024-5-31-一瞥雪花之白.md
@@ -22,11 +22,11 @@ published: true
 
 因为一些故障，老师决定用腾讯会议在自己的电脑授课，而我们则用手机入会，我低头看着手机屏幕，脸埋得比鸵鸟还要低，但是眼珠却时不时的像要顶破眼珠子的框架一般往外翻，捕捉着在前排椅子间的空隙她身体摆动的瞬间漏出来的哪怕一点白色。
 
-一段漫长的时间过去，对我来说却只像是一瞬间，她又靠在了椅背上，许是坐累了，一只腿又重新搭在另外一只腿上面，大腿上的肌肉因为压迫的缘故而收缩，形成一道沟壑，但是因为她人很苗条，大腿肉也很均匀，形成的肉沟不会显得恶心，反倒很诱人，因为这正是那娇嫩双腿之柔软的最好证明。
+一段漫长的时间过去，对我来说却只像是一瞬间，她又靠在了椅背上，许是坐累了，一只腿又重新摞在另外一只腿上面，大腿上的肌肉因为压迫的缘故而收缩，形成一道沟壑，但是因为她人很苗条，大腿肉也很均匀，形成的肉沟不会显得恶心，反倒很诱人，因为这正是那娇嫩双腿之柔软的最好证明。
 
 她的腿反射着窗口照进来的光，白里透红，接近短裤的地方，还有一颗并不起眼的痣，一小撮黑反而将白衬的更白。整个教室的颜色因此都渐渐暗淡下去，在我的视野里还留有颜色的只剩下这一处空间。我一边在脑海中想象，一边为龌龊的想法而感到无地自容，虽说论心无圣人，但想必论迹我更是不折不扣的烂人。
 
-且先抛去道德考虑，那大腿白净如纸，其触感一定是像玉石一样顺滑，但又兼有家猫的柔软。如果把手放上去会怎样呢，假若一整个手掌心和大腿肉完全贴合的话，能感受到何种程度的温柔？她会不会出于娇羞而满面通红呢？我擅自幻想她精致的面颊泛起微红，但是却不甩开我的手，而是放任我的手在她的大腿揉捏，娇嫩的大腿手感一定是像刚成熟的樱桃，稍微用力点把玩，其中的汁水就呼之欲出，最后留下一抹淡淡的红。
+且先抛去道德考虑，那大腿白净如纸，其触感一定是像玉石一般顺滑，而兼有家猫的柔软。如果把手放上去会怎样呢，假若一整个手掌心和大腿肉完全贴合的话，能感受到何种程度的温柔？她会不会出于娇羞而满面通红呢？我擅自幻想她精致的面颊泛起微红，但是却不甩开我的手，而是放任我的手在她的大腿揉捏，娇嫩的大腿手感一定是像刚成熟的樱桃，稍微用力点把玩，其中的汁水就呼之欲出，最后留下一抹淡淡的红。
 
 再者是膝盖下方弯曲的部分，在光影衬托下隐藏于阴影的肉沟，看起来柔软而温润，一点点因为挤压而供起的肉更显得可爱而性感，因为是两条腿之间的沟壑，只需观察此处就可以将视野覆盖到她那穿着短裤的大腿的绝大部分，她的腿型修长而纤细，白白净净，看不见一根毛，而毛孔清晰可见，仿佛在证明自身如丝绸般柔软糯滑的触感，
 
