--- a/source/_posts/2024-5-23-Git见解和常用命令.md
+++ b/source/_posts/2024-5-23-Git见解和常用命令.md
@@ -7,6 +7,7 @@ tags:
 - wiki
 toc: true
 cover: https://img.picui.cn/free/2024/06/01/665b025fa4d4e.png
+top: 1000
 ---
 > Distributed-is-the-new-centralized
 <!--more-->
