--- a/source/_posts/2024-5-25-Chatgpt的最佳实践.md
+++ b/source/_posts/2024-5-25-Chatgpt的最佳实践.md
@@ -7,6 +7,7 @@ tags:
 - 实践
 toc: true
 cover: https://img.picui.cn/free/2024/06/01/665b025f6ad3b.jpeg
+top: 20
 ---
 题记：本文介绍如何使用Chatgpt解决实际问题
 <!--more-->
