更新 2024-06-01-hexo框架迁移记录.md

--- a/source/_posts/2024-06-01-hexo框架迁移记录.md
+++ b/source/_posts/2024-06-01-hexo框架迁移记录.md
@@ -11,4 +11,12 @@ top: 1
 ---
 题记：本篇介绍用Hexo框架构建博客的经历
 <!--more-->
-五月将博客部署在Github Pages上，并采用了Github官方推荐的Jekyll架构，然而该架构几乎没有中文支持，并且没能找到我喜欢的模板，从零开始一砖一瓦的构建需要大量的时间和学习，我没这个成本，所以就放着没管，直到阅读到Sukka的博客，三栏布局的主页相当优雅，于是我导航到Sukka博客的最后一页，了解到他是用Hexo框架搭建的网站，并提供了hexo的官方文档，这样就很方便了
+去年弄了基于wordpress的博客，然而碍于备案太麻烦，专门去国外平台租了服务器，买了域名，一番折腾后终于把网站挂在了租来的服务器，不过没几天就被黑客打下来了，我又没有什么运维知识，最终只能不了了之。
+
+后续听说了Github Pages，由Github免费提供的网页寄存服务，可以存放静态网页，包括博客、项目文档、甚至整本书。最重要的是因为网页托管在github那边，因此几乎没有被黑客攻击的风险。
+
+于是今年五月初心血来潮将博客部署在GitHubPages，随便找了个jekyll主题，然后把默认的url解析到去年购买的闲置域名ac1d.cc，配置好cname后自动转发到www.ac1d.cc，在这之后就放着没管，只是有兴致时写一两篇博文，往往很短，只是随手一记。
+
+这期间上网查阅资料时偶然打开了sukka的博客，顿觉界面十分清爽，三栏布局深得我心。迅速阅览后得知sukka的博客是用hexo框架建立的，于是在阅读官方文档后，我在计算机上安装了Hexo框架，并init了第一个博客文件夹，一开始我想用metarial主题，但是不知为何总是报一堆错，metarial的文档写的也很烂，令人不知所云，最后选择了icarus主题，部署好后终端键入'hexo server'，然后就可以在localhost的4000端口打开博客的预览界面。
+一番修改后就变成了现在的样子，具体变更可以参阅导航栏上的变更日志。
+
