--- a/source/_posts/2024-06-01-hexo框架迁移记录.md
+++ b/source/_posts/2024-06-01-hexo框架迁移记录.md
@@ -1,13 +1,21 @@
 ---
 title: Hexo框架迁移记录
 date: 2024-06-01 17:50:31
+urlname: hexo_framework
+summary: migration to hexo from jykell
+cover: https://img.picui.cn/free/2024/06/03/665dc8016c08b.png
+thumbnail: https://picui.cn/thumbnails/f08c5c6a63c03159fe48fa314050285a.png
+top: 100000
+toc: true
+comment: true
+published: true
+mathjax: true
+categories:
+- 笔记
 tags:
 - 技术
 - 日记
 - Hexo框架
-cover: https://img10.360buyimg.com/ddimg/jfs/t1/104299/28/23631/66850/622032acEe2917d77/d738b5747ec64e49.png
-thumbnail: https://img.picui.cn/free/2024/06/02/665c6539c2838.png
-top: 1
 ---
 题记：本篇介绍用Hexo框架构建博客的经历
 <!--more-->
@@ -15,7 +23,7 @@ top: 1
 
 后续听说了Github Pages，由Github免费提供的网页寄存服务，可以存放静态网页，包括博客、项目文档、甚至整本书。最重要的是因为网页托管在github那边，因此几乎没有被黑客攻击的风险。
 
-于是今年五月初心血来潮将博客部署在GitHubPages，随便找了个jekyll主题，然后把默认的url解析到去年购买的闲置域名ac1d.cc，配置好cname后自动转发到www.ac1d.cc，在这之后就放着没管，只是有兴致时写一两篇博文，往往很短，只是随手一记。
+于是今年五月初心血来潮将博客部署在GitHubPages，随便找了个jekyll主题，然后把默认的url解析到去年购买的闲置域名ac1d.cc，配置好cname后自动转发到www前缀，在这之后就放着没管，只是有兴致时写一两篇博文，往往很短，只是随手一记。
 
 这期间上网查阅资料时偶然打开了sukka的博客，顿觉界面十分清爽，三栏布局深得我心。迅速阅览后得知sukka的博客是用hexo框架建立的，于是在阅读官方文档后，我在计算机上安装了Hexo框架，并init了第一个博客文件夹，一开始我想用metarial主题，但是不知为何总是报一堆错，metarial的文档写的也很烂，令人不知所云，最后选择了icarus主题，部署好后终端键入'hexo server'，然后就可以在localhost的4000端口打开博客的预览界面。
 一番修改后就变成了现在的样子，具体变更可以参阅导航栏上的变更日志。
