--- a/source/_posts/2024-5-25-Chatgpt的最佳实践.md
+++ b/source/_posts/2024-5-25-Chatgpt的最佳实践.md
@@ -1,13 +1,20 @@
 ---
 title: Chatgpt的最佳实践
 date: 2024-05-25 21:14:33
-tags: 
-- 技术
-- AI
-- 实践
-toc: true
+urlname: chatgptsolvissues
+summary:  How to use solve particle problems with chatgpt
 cover: https://img.picui.cn/free/2024/06/01/665b025f6ad3b.jpeg
-top: 20
+thumbnail: https://picui.cn/thumbnails/36b59c8a798fa6e12f5e4fd3d7f236af.png
+top: 1000
+toc: true
+comment: true
+published: true
+mathjax: true
+categories:
+- 笔记
+tags:
+- 效率
+- 工具
 ---
 题记：本文介绍如何使用Chatgpt解决实际问题
 <!--more-->
