--- a/source/_posts/2024-5-29-Arc浏览器Win版使用指北.md
+++ b/source/_posts/2024-5-29-Arc浏览器Win版使用指北.md
@@ -1,13 +1,21 @@
 ---
 title: Arc浏览器Win版常见问题解决方法
 date: 2024-05-29 21:14:33
-tags: 
-- BugFixes
+urlname: arc_browser_problems_solved
+summary:  solved some problems in arc browser on windows
+cover: https://img.picui.cn/free/2024/06/01/665b1193bbb5d.jpg
+thumbnail: https://picui.cn/thumbnails/05adfdb25395aba5559e80191404fc97.png 
+top: 10000
+toc: true
+comment: true
+published: true
+mathjax: true
+categories:
+- 工具
+tags:
+- bugfixes
 - Arc浏览器
 - 日记
-toc: true
-top: 10000
-cover: https://img.picui.cn/free/2024/06/01/665b1193bbb5d.jpg
 ---
 题记：本文解决Arc浏览器中的常见错误
 <!--more-->
@@ -38,6 +46,7 @@ cover: https://img.picui.cn/free/2024/06/01/665b1193bbb5d.jpg
 
 因为特殊原因，Arc的登录/同步服务器在大陆一般是ping不通的，因此除魔法外别无他法，即使使用魔法仍旧要等个十秒左右，因人而异，刚开始beta的时候，也有人直连注册登录成功的。
 
+UWP应用联网限制就是Windows系统限制UWP应用访问本地回环（localhost,127.0.0.1）,但是克拉施需要应用能够把网络请求传给本地回环才可以代理,所以解除了UWP限制以后UWP应用的联网就走clash了,此时登录注册正是时候，但是如此一来就会导致hosts文件对Arc发送网络请求的限制失效,因为联网请求被发送给了代理节点的中转服务器,而中转服务器没有被hosts文件解析到本地回环,所以如果开了代理还解除了限制就会导致Arc实际上走clash做了一系列的联网请求,其结果就是能打开但是很慢，因为和服务器通信需要时间，如果你的节点延迟高网速还慢，Arc的启动速度只会更慢，因此登录注册成功后不开代理或者重新启用Arc的联网限制，Arc的联网请求就会全部解析到localhost从而做到秒开。
 **Arc的同步服务器:**
 
 > o298668.ingest.sentry.io:443
