--- a/source/_posts/2024-5-29-Utools破解过程.md
+++ b/source/_posts/2024-5-29-Utools破解过程.md
@@ -1,13 +1,21 @@
 ---
 title: Utools Crack
 date: 2024-05-29 21:14:33
-tags: 
-- Utools
-- 效率
+urlname: utools_crack
+summary: Crack Utools with asar
+cover: https://img.picui.cn/free/2024/06/03/665dc9ce7b7c9.png
+thumbnail: https://picui.cn/thumbnails/553f966aff2251c7d1cb357a6ca209ed.png
+top: 100
+toc: true
+comment: true
+published: true
+mathjax: true
+categories:
 - 工具
+tags:
 - 破解
-cover: https://img.picui.cn/free/2024/06/01/665b025fb442c.jpeg
-top: 10
+- 生产力
+- 效率
 ---
 破解版本：utools 4.0.1
 <!--more-->
