--- a/source/_posts/2024-5-31-一瞥雪花之白.md
+++ b/source/_posts/2024-5-31-一瞥雪花之白.md
@@ -1,12 +1,20 @@
 ---
 title: 一瞥雪花之白
 date: 2024-05-31 21:14:33
-tags: 
+urlname: legs
+summary: prettylegs
+cover: ../img/jk.jpg
+top: 1
+toc: true
+comment: true
+published: false
+mathjax: true
+categories:
+- 隐私
+tags:
 - 文学
 - R18
-- 日记
-cover: ../img/jk.jpg
-published: true
+- 日记 
 ---
 省流：批瘾犯了
 <!--more-->
