--- a/source/_posts/2024-5-23-Git见解和常用命令.md
+++ b/source/_posts/2024-5-23-Git见解和常用命令.md
@@ -1,13 +1,21 @@
 ---
 title: Git见解和常用指令
 date: 2024-05-23 21:14:33
-tags: 
+urlname: git_command
+summary: 分布式就是新集中
+cover: https://img.picui.cn/free/2024/06/01/665b025fa4d4e.png
+thumbnail: https://picui.cn/thumbnails/233a8a49dd99e7d7146537264504dc67.png
+top: 1000
+toc: true
+comment: true
+published: true
+mathjax: true
+categories:
+- 笔记
+tags:
 - 技术
 - Git
 - wiki
-toc: true
-cover: https://img.picui.cn/free/2024/06/01/665b025fa4d4e.png
-top: 1000
 ---
 > Distributed-is-the-new-centralized
 <!--more-->
