--- a/source/_posts/2024-06-01-hexo框架迁移记录.md
+++ b/source/_posts/2024-06-01-hexo框架迁移记录.md
@@ -29,3 +29,17 @@ tags:
 这期间上网查阅资料时偶然打开了sukka的博客，顿觉界面十分清爽，三栏布局深得我心。迅速阅览后得知sukka的博客是用hexo框架建立的，于是在阅读官方文档后，我在计算机上安装了Hexo框架，并init了第一个博客文件夹，一开始我想用metarial主题，但是不知为何总是报一堆错，metarial的文档写的也很烂，令人不知所云，最后选择了icarus主题，部署好后终端键入'hexo server'，然后就可以在localhost的4000端口打开博客的预览界面。
 一番修改后就变成了现在的样子，具体变更可以参阅导航栏上的变更日志。
 
+<div>
+    <section id="comments" class="comments">
+      <style>
+        .utterances{max-width: 100%;}
+      </style>
+        <script src="https://utteranc.es/client.js"
+                repo="PaRr0tBoY/parr0tboy.github.io"
+                issue-term="title"
+                theme="transparent_dark"
+                crossorigin="anonymous"
+                async>
+        </script>
+  </section>
+</div>
